# assembly-stats

./: .gitignore  CMakeLists.txt
include/: fasta.h  fastq.h  filetype.h  stats.h
src/: assembly-stats.cpp  filetype.cpp  stats.cpp
test/src/: stats_unittest.cpp
